port: backport core utilities and config to Java 8